opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/incremental"
bug-reports: "https://github.com/janestreet/incremental/issues"
dev-repo: "git+https://github.com/janestreet/incremental.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/incremental/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "4.14.0"}
  "core"        {>= "v0.16" & < "v0.17"}
  "core_kernel" {>= "v0.16" & < "v0.17"}
  "lru_cache"   {>= "v0.16" & < "v0.17"}
  "ppx_jane"    {>= "v0.16" & < "v0.17"}
  "ppx_optcomp" {>= "v0.16" & < "v0.17"}
  "dune"        {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Library for incremental computations"
description: "
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
