(library
 (name incremental_debug_test)
 (libraries core core_unix expect_test_helpers_core.expect_test_helpers_base
   expect_test_helpers_core patdiff.expect_test_patdiff expect_test_graphviz
   expect_test_sexp_diff incremental incremental_skeleton incremental_debug
   core_unix.time_ns_unix core_kernel.timing_wheel)
 (flags :standard -w -60)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets import.ml incremental_test.ml incremental_test.mli test_config.ml
   test_config.mli test_for_analyzer.ml test_for_analyzer.mli
   test_generics.ml test_generics.mli test_incremental.ml
   test_incremental.mli test_exceptional_behavior.ml
   test_exceptional_behavior.mli test_let_syntax.ml test_let_syntax.mli
   test_skeleton.ml test_skeleton.mli)
 (deps
  (:first_dep generate_debug_test_lib.sh)
  (glob_files ../test/*.ml)
  (glob_files ../test/*.mli))
 (action
  (bash ./%{first_dep})))

(rule
 (targets explicit_dependencies.ml explicit_dependencies.mli)
 (deps %{workspace_root}/bin/gen-explicit-dependencies.sh)
 (action
  (bash "%{deps} incremental")))
